new log and create icon

--- a/Momo CV Official/aboutme.html
+++ b/Momo CV Official/aboutme.html
@@ -3,20 +3,57 @@
 
 <head>
   <meta charset="utf-8">
-  <title>About me</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <title>Momo Nguyen</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
 </head>
-<h1>Hi, Welcome to my page</h1>
+<h1>Momo Nguyen</h1>
++1 (647) 333-1789 Ontario monguyen.nhg@gmail.com Linkedin https://www.linkedin.com/in/momo-nguyen
+<hr>
 
 <body>
-  <ol>
-    <a href="index.html ">This is my CV </a><br>
-    <a href="mycareersjourney.html">My journey</a><br>
-    <a href="less30more50.html ">Less than 30yo more than 50 changes</a><br>
-    <a href="contactme.html ">Contact me here</a><br>
-    <a href="myprojects.html"> Myprojects</a>
-  </ol>
+  SUMMARY OF QUALIFICATIONS
+  Extensive background in Business management with over three years in Administrative Assistance and HR functions;
+  Resourcefulness, flexibility, and the ability to create and execute training with strong capabilities as a team leader;
+  Trilingual with business level communication in English, French and Vietnamese.
+  <hr>
+  WORK EXPERIENCE
+  Billing Representative Waterloo, Canada
+  Opentext
+  Built, monitored, and logged 50+ invoices processed by Saleforces, SAP and Changepoint every two weeks;
+  Recommended and negotiated billing plans with project managers or customers and helped them find solutions to make billing their project more feasible and increasing the payment rate by 11%;
+  Maintained a full circle of billing and built relationships with customers daily by offering high quality customer service with professional, friendly and engaging service to increase satisfaction rate by 12% YTD.
+  Administrative Assistant Clerk Toronto, Canada
+  HR Connect
+  Assisted 50+ inquiries weekly from builders with daily interactions with related parties, personnel and equipment resources as needed to resolve construction problems and to avoid delays;
+  Inspected and drafted 80+ orders weekly ensuring prompt and accurate submission of invoices and orders using Sharepoint, Citrix, Banner and FSM;
+  Updated systems daily for timely and accurate progress reports and ensured staff and subcontractors follow Reliance Home Comfort's construction and policy guidelines.
+  Real Estate Administrative Assistant Clerk Toronto, Canada
+  Cornerstone Marketing Realty Inc., Brokerage
+  Obtained information and public records about property for sale and communicated effectively with related parties;
+  Drafted and documented 50+ contracts and amendments daily by using Oracle JD Edwards;
+  Prepared and distributed real estate documents for closings according to our client Menkes’ standards and successfully ensured 1000+ deals in three weeks.
+  Human Resource Assistant Clerk Montreal, Canada
+  Gestion Colimat Inc.
+  Successfully assisted Vice president in administrative and human resources tasks to reach the highest work productivity, increasing customer satisfaction rating by 12%;
+  Supported and solving 70+ customer's inquiries weekly to ensure high quality of customer service experience by using Teamsters, Zoom and Outlook;
+  Generated and spearheaded data, filing and financial reports of 17 hotels of Germain Hotel Groups and over 700 employees from Nethris and Infopunch for monthly performance.
+  <hr>
+  LEADERSHIP EXPERIENCE
+  Human Resource Assistant Clerk Montreal, Canada
+  Gestion Colimat Inc.
+  Created 10+ training materials for departments by evaluating employee's performance and using data from company’s statistics, improvements and implementations.
+  Partnered with the hotels to recruit new teams in different departments bringing out 20+ candidates monthly;
+  <hr>
+  EDUCATION
+  Ms.C in International Business Management February 2019
+  B.A in Hospitality Business Management December 2017
+  Robert Gordon University Luzern, Switzerland
+  <hr>
+  TECHNICAL SKILLS
+  HTML|CSS|Java|MS Office|Citrix|Banner|Sharepoint|FSM|JDE|Nethris|Infopunch|Oracle|CRM|Quickbooks
 
+  <a href="aboutme.html ">Back to home page</a> <a href="contactme.html ">Contact me</a>
 </body>
 
 </html>
