--- a/Momo CV Official/less30more50.html
+++ b/Momo CV Official/less30more50.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Lessthan30 Morethan50</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 <h3>Yes, Hi. My name is Momo. I am under 30 years old and want to share what are my 50 changes in my life.
   All the events have been affected me negatively and possitively.<br>
