--- a/Momo CV Official/mycareersjourney.html
+++ b/Momo CV Official/mycareersjourney.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>My Journey to learn how to be a coder</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 <h1>From customer service to be a coder</h1>
 Thank you for reading this site. <br>
@@ -29,7 +30,13 @@ I believe I am not a good writer and also not a perfect English speaker. So my a
   They are the one creates the whole feelings just like home and beyond. Sometimes you can even linger because their service they provide is like a butler of the house.
   At the end of the internship, I honestly dream to be a housekeeper manager in the future.
   <hr>
-  <h2>log</h2>
+  <h2>Log April 6, 2022</h2>
+  15 days in coding
+  I have a great relaship with my partner, who also an engineer and has huge passion in coding. He is the one who introduce me into learn how to code.
+  Today, he showed me how to open computer by using git command. With him it is a basic code, but with a person has 0 experience in coding. It is really
+  fancinated and open file, delete file, log a note just by using Terminal. After 15 days of coding, I know how to draft a simple html, and learning how
+  to search online. It is fun and alot to learn. Here is my work for today and I save this site by using git. Please go to <a href="trackmyprojects.html"> this link</a> to track my projects.
+  The site is just to show log of the day I learnt things and how did I apply to it. Cheers.
 
 </body>
   <a href="aboutme.html ">Back to home page</a> <a href="contactme.html ">Contact me</a>
