--- a/Momo CV Official/contactme.html
+++ b/Momo CV Official/contactme.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Contact me</title>
       <link rel="stylesheet" href="css/styles.css">
+      <link rel="icon" href="favicon.ico">
   </head>
   <h1>Momo Nguyen</h1>
   +1 (647) 333-1789 Ontario monguyen.nhg@gmail.com Linkedin https://www.linkedin.com/in/momo-nguyen
