create block on 3rd site, margin padding and border div added

--- a/HTML - Study Personal site/3rd.html
+++ b/HTML - Study Personal site/3rd.html
@@ -2,10 +2,23 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Congratulation</title>
+    <title>Learn how to block margin border padding</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-     
-    <h1>Thank you, I will contact you as soon as possible</h1>
+
+    <h1>Learn how to block margin border padding</h1>
+
+    <div class="top-container">
+
+    </div>
+
+    <div class="middle-container">
+
+    </div>
+
+    <div class="bottom-container">
+
+    </div>
   </body>
 </html>
