--- a/HTML - Study Personal site/index.html
+++ b/HTML - Study Personal site/index.html
@@ -66,7 +66,8 @@
   <textarea name="textarea" rows="10" cols="10"></textarea>
 </form>
 
-
+<h1>how to work divs with margin border and padding</h1>
+<a href="3rd.html"> here is the link</a>
 </body>
 
 </html>
