lesson 58: float and half design

--- a/HTML - Study Personal site/3rd.html
+++ b/HTML - Study Personal site/3rd.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-    <h1>Learn how to block margin border padding</h1>
+    <h2> Section 4-5: Learn how to <a href="https://www.w3schools.com/css/css_margin.asp">block margin </a> border padding</h2>
 
     <div class="top-container">
 
@@ -20,5 +20,38 @@
     <div class="bottom-container">
 
     </div>
+    <p><a href="https://www.w3schools.com/css/css_display_visibility.asp">Display</a> has Block, Inline, Inline Block, None</p>
+
+
+    <h4 class= Block-1>Block 1 </h4>
+    <span>Block 2 check Inspect to see Block 1</span>
+    <span>Block 3</span>
+    <p>The image can be modify also <a href="https://www.w3schools.com/css/css_positioning.asp">with position</a> and moving around the website</p>
+    <ul>
+      <li>Static</li>
+      <li>relative: doesn't affect any other element, only the block moved</li>
+      <li>Absolute: help to remove from html and we can edit wherever we want <br> will move the inside element in (div) tag, so if the relative block move the whole absolute also move </li>
+      <li>Fixed</li>
+      <li>Padding to move up/down content</li>
+    </ul>
+<p>The relative position will display as follow</p>
+    <div class="top-container-2">
+
+    </div>
+
+    <div class="middle-container-2">
+
+    </div>
+
+    <div class="bottom-container-2">
+
+    </div>
+<p>The Absolute position</p>
+<div class="parent">
+<img class=chillies src="chillies.png" alt="baby-element">
+</div>
+
+<h3>Check how to create float</h3>
+<a href="https://www.w3schools.com/css/css_float.asp">How to create Float lesson 58</a>
   </body>
 </html>
