--- a/HTML - Study Personal site/index.html
+++ b/HTML - Study Personal site/index.html
@@ -8,10 +8,11 @@
 </head>
 
 <body>
-  <h1 >Momo Nguyen</h1>
+  <h1 >Section 1-3: html</h1>
   <p><em>This is the</em> <i>italic style</i></p>
   <p><strong>this is strong type</strong><b> and this is bold</b></p>
   <a href="https://www.w3schools.com/html/html_formatting.asp">this is a format style</a>
+  <a href="https://fonts.google.com/"> Font styles should check weight, line height,style and format to get better font</a>
   <p><a href="https://www.w3schools.com/html/html_paragraphs.asp">this is for how to create lists</a></p>
   <ul class="unorderlist" >
     <li>this is the link to create unorder list</li>
@@ -66,8 +67,9 @@
   <textarea name="textarea" rows="10" cols="10"></textarea>
 </form>
 
-<h1>how to work divs with margin border and padding</h1>
+<h1>Section 4-5:how to work divs with margin border and padding</h1>
 <a href="3rd.html"> here is the link</a>
+
 </body>
 
 </html>
