finish half page

--- a/Bootstrap/Bootstrap installation/index.html
+++ b/Bootstrap/Bootstrap installation/index.html
@@ -4,14 +4,15 @@
 <head>
   <meta charset="utf-8">
   <title>Bootstrap instalation</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <!-- NOTE:can add link like above or copy the template from this websit https://getbootstrap.com/docs/5.1/getting-started/introduction/
   -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
+  <!-- NOTE: add JavaScript to make it work-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <!-- NOTE: add js to make it work-->
+  <!-- NOTE: add font by using font google -> add also to css -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;900&family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
-<!-- NOTE: add font by using font google -> add also to css -->
+
 </head>
 <!-- NOTE: add the class in every open tag to use bootstrap,  to this website https://getbootstrap.com/docs/5.1/components/navbar/-->
 <!-- NOTE: if want to add anything in the HTML (spine) file, then modify more specific in CSS (style) with ID or tag
@@ -91,6 +92,18 @@ a new div/ class can make modify the whole area without make any else in CSS -->
   </div>
 
 
+<!-- NOTE: Container use like a block and easier to modify and move aroun -->
+<div class="container" style="background-color: pink;">
+sjdhfbsdjndskf
+fsjdfh adm,faviconejknfascksjknvhbauijkmcsv bhahjfmkd
+ahjskdf c
+</div>
+
+<div class="container-fluid" style="background-color: yellow;">
+sjdhfbsdjndskf
+fsjdfh adm,faviconejknfascksjknvhbauijkmcsv bhahjfmkd
+ahjskdf c
+</div>
 
 </body>
 
