--- a/Bootstrap/Nopester/index.html
+++ b/Bootstrap/Nopester/index.html
@@ -6,47 +6,56 @@
   <title>Nopester</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/f4d85c8151.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
 
   <section id="title">
+    <div class="container-fluid">
 
-    <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#F68989;">
-      <a class="navbar-brand" href=""> nopester</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Pricing</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="">Download</a>
-          </li>
-        </ul>
+      <!-- Nav Bar -->
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href=""> nopester</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Pricing</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Download</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+
+      <!-- Title -->
+
+      <div class='row'>
+        <div class="col-lg-6">
+          <h1>You won't need to burn yourself to warm other people's desire.</h1>
+          <button type="button" class="btn btn-outline-light btn-lg"> <i class="fa-solid fa-heart-circle-plus"></i> Self-love </button>
+          <button type="button" class="btn btn-outline-light btn-lg"> <i class="fa-solid fa-person-arrow-up-from-line"></i> Aprreciation </button>
+        </div>
+
+        <div class="col-lg-6">
+          <img src="images/rose.png" alt="rose-show-aprreciation">
+        </div>
       </div>
-    </nav>
 
-
-    <!-- Title -->
-
-    <div>
-      <h1>You won't need to burn yourself to warm other people's desire.</h1>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
     </div>
-    <div>
-      <img src="images/rose.png" alt="rose-show-aprreciation">
-    </div>
-
   </section>
 
 
@@ -54,14 +63,27 @@
 
   <section id="features">
 
+<div class="row">
+  <div class="feature-box col-lg-4 col-md-2">
+    <i class="icon fa-solid fa-user-graduate fa-4x"></i>
     <h3>Easy to learn.</h3>
-    <p>So easy to learn, narcissist unable to track.</p>
+    <p> So easy to learn, narcissist unable to track.</p>
+  </div>
 
+  <div class="feature-box col-lg-4 col-md-2">
+    <i class="icon fa-solid fa-person-circle-check fa-4x"></i>
     <h3>Understand your limit</h3>
     <p>Set up the boundaries, no one dares to cross.</p>
+  </div>
 
+  <div class="feature-box col-lg-4 col-md-2">
+    <i class="icon fa-solid fa-users-slash fa-4x"></i>
     <h3>Cut off bad vibes.</h3>
     <p>Find the aprreciation that you need without guilt.</p>
+  </div>
+</div>
+
+
 
   </section>
 
@@ -96,33 +118,33 @@
 
   <section id="pricing">
 
-    <h2>A Plan for Every People Pleaser</h2>
+    <h2> <i class="fa-solid fa-people-group"></i> A Plan for Every People Pleaser <i class="fa-solid fa-people-group"></i></h2>
     <p>Simple and affordable price plans for your and your feelings.</p>
 
 
-    <h3>No bad vibe</h3>
+    <h3> <i class="fa-solid fa-users-slash"></i> No bad vibe</h3>
     <h2>Free</h2>
     <p>5 minutes of new habit per day</p>
     <p>Less 10 Messages with bad vibes per day</p>
     <p>Unlimited Seft aprreciation</p>
-    <button type="button">Sign Up</button>
+    <button type="button"> <i class="fa-solid fa-ban"></i> <i class="fa-solid fa-cat"></i> Ignore and Filter</button>
 
 
-    <h3>5s No</h3>
+    <h3> <i class="fa-solid fa-clock-rotate-left"></i> 5s No</h3>
     <h2>Free.49/ month</h2>
     <p>10 minutes of new habit per day</p>
     <p>If it makes you think more than 5s, say NO</p>
     <p>Unlimited Seft aprreciation with Kisses</p>
-    <button type="button">Sign Up</button>
+    <button type="button"> <i class="fa-solid fa-person-walking-luggage"></i> Pack and Leave</button>
 
 
-    <h3>Pink Rose</h3>
+    <h3> <i class="fa-solid fa-jedi"></i>Pink Rose</h3>
     <h2>Free.99/ month</h2>
     <p>Pirority Yourself</p>
     <p>20 minutes of new habit per day</p>
     <p>Say NO when it makes you think more than 5s</p>
     <p>Unlimited Seft aprreciation with Kisses and Hugs</p>
-    <button type="button">Sign Up</button>
+    <button type="button"> <i class="fa-solid fa-hand-fist"></i> Refresh and Rise</button>
 
   </section>
 
@@ -131,9 +153,9 @@
 
   <section id="cta">
 
-    <h3>Find the Seft Love Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3>Find your Peace Today.</h3>
+    <button type="button" class="btn btn-outline-light btn-lg"> <i class="fa-solid fa-heart-circle-plus"></i> Self-love </button>
+    <button type="button" class="btn btn-outline-dark btn-lg"> <i class="fa-solid fa-person-arrow-up-from-line"></i> Aprreciation </button>
 
   </section>
 
