--- a/HTML - Study Personal site/3rd.html
+++ b/HTML - Study Personal site/3rd.html
@@ -30,7 +30,7 @@
     <ul>
       <li>Static</li>
       <li>relative: doesn't affect any other element, only the block moved</li>
-      <li>Absolute: help to remove from html and we can edit wherever we want <br> will move the inside element in (div) tag, so if the relative block move the whole absolute also move </li>
+      <li>Absolute: help to remove from html flow and we can edit wherever we want <br> will move the inside element in (div) tag, so if the relative block move the whole absolute also move </li>
       <li>Fixed</li>
       <li>Padding to move up/down content</li>
     </ul>
