--- a/Momo's Blank Space/index.html
+++ b/Momo's Blank Space/index.html
@@ -55,7 +55,7 @@
       <!-- Title -->
 
       <div class='row'>
-        <div class="col-lg-6 col-md-12">
+        <div class="box col-lg-6 col-md-12">
           <h2>Who is Momo?</h2>
 
           <div class="feature-box">
@@ -75,7 +75,7 @@
           </div>
         </div>
         <!-- NOTE: will be a slide of project running -->
-        <div class="col-lg-6 col-md-12 col-title-right">
+        <div class="box-two col-lg-6 col-md-12 col-title-right">
           <h2>Momo's projects</h2>
           <img class="projects-image" src="images/vertical-image.jpeg" alt="images">
           <h3>Project A</h3>
